--- a/project-photos/metro-65/index.html
+++ b/project-photos/metro-65/index.html
@@ -13,14 +13,14 @@
     <!-- Fount Awesome -->
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
 
-    <link rel="stylesheet" href="https://damgar.nathanbirrell.me/css/app.css">
+    <link rel="stylesheet" href="http://damgar.nathanbirrell.me/css/app.css">
 
     <!-- Open Graph: https://developers.facebook.com/docs/opengraph/howtos/maximizing-distribution-media-content/
     Twitter: https://dev.twitter.com/docs/cards/types/summary-card
     ============================== -->
     <meta property="og:title" content="Photos: Metro 65"/>
     <meta property="og:site_name" content="Damgar Property Group"/>
-    <meta property="og:url" content="https://damgar.nathanbirrell.me"/>
+    <meta property="og:url" content="http://damgar.nathanbirrell.me"/>
     <meta property="og:description" content=""/>
     <meta property="og:image" content=""/>
     <meta name="twitter:card" content="summary">
@@ -31,23 +31,23 @@
 
     <!-- favicon
     ================================================== -->
-    <link rel="shortcut icon" href="https://damgar.nathanbirrell.me/favicon.ico">
+    <link rel="shortcut icon" href="http://damgar.nathanbirrell.me/favicon.ico">
 
-    <link rel="apple-touch-icon" sizes="57x57" href="https://damgar.nathanbirrell.me/img/icons/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="https://damgar.nathanbirrell.me/img/icons/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="https://damgar.nathanbirrell.me/img/icons/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="https://damgar.nathanbirrell.me/img/icons/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="https://damgar.nathanbirrell.me/img/icons/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="https://damgar.nathanbirrell.me/img/icons/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="https://damgar.nathanbirrell.me/img/icons/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="https://damgar.nathanbirrell.me/img/icons/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="https://damgar.nathanbirrell.me/img/icons/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="https://damgar.nathanbirrell.me/img/icons/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="https://damgar.nathanbirrell.me/img/icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="https://damgar.nathanbirrell.me/img/icons/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="https://damgar.nathanbirrell.me/img/icons/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="57x57" href="http://damgar.nathanbirrell.me/img/icons/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="http://damgar.nathanbirrell.me/img/icons/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="http://damgar.nathanbirrell.me/img/icons/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="http://damgar.nathanbirrell.me/img/icons/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="http://damgar.nathanbirrell.me/img/icons/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="http://damgar.nathanbirrell.me/img/icons/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="http://damgar.nathanbirrell.me/img/icons/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="http://damgar.nathanbirrell.me/img/icons/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="http://damgar.nathanbirrell.me/img/icons/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="http://damgar.nathanbirrell.me/img/icons/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="http://damgar.nathanbirrell.me/img/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="http://damgar.nathanbirrell.me/img/icons/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="http://damgar.nathanbirrell.me/img/icons/favicon-16x16.png">
     <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="https://damgar.nathanbirrell.me/img/icons/ms-icon-144x144.png">
+    <meta name="msapplication-TileImage" content="http://damgar.nathanbirrell.me/img/icons/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
   </head>
   <body>
@@ -90,13 +90,13 @@
         <div id="widemenu" class="top-bar">
           <div class="top-bar-center">
             <ul class="menu">
-              <li><a href="https://damgar.nathanbirrell.me/portfolio">Portfolio</a></li>
-<li><a href="https://damgar.nathanbirrell.me/testimonials">Testimonials</a></li>
-<li><a href="https://damgar.nathanbirrell.me/#about">About</a></li>
-<li><a href="https://damgar.nathanbirrell.me/contact">Contact</a></li>
+              <li><a href="http://damgar.nathanbirrell.me/portfolio">Portfolio</a></li>
+<li><a href="http://damgar.nathanbirrell.me/testimonials">Testimonials</a></li>
+<li><a href="http://damgar.nathanbirrell.me/#about">About</a></li>
+<li><a href="http://damgar.nathanbirrell.me/contact">Contact</a></li>
 
             </ul>
-            <p><a class="logo" href="https://damgar.nathanbirrell.me"><img src="https://damgar.nathanbirrell.me/img/logo.png" alt="Damgar Group Logo"></a></p>
+            <p><a class="logo" href="http://damgar.nathanbirrell.me"><img src="http://damgar.nathanbirrell.me/img/logo.png" alt="Damgar Group Logo"></a></p>
           </div>
         </div>
 
@@ -104,9 +104,9 @@
         <div class="sticky expanded">
           <div class="title-bar" data-responsive-toggle="widemenu" data-hide-for="medium">
             <div class="title-bar-center">
-              <img id="sticky-logo-swap" class="hide" src="https://damgar.nathanbirrell.me/img/logo_d.png" alt="Damgar Group Symbol">
-              <img id="expanded-logo-swap" class="hide" src="https://damgar.nathanbirrell.me/img/logo.png" alt="Damgar Group Symbol">
-              <a class="logo" href="https://damgar.nathanbirrell.me"><img class="mobile-logo mobile-logo-expanded" src="https://damgar.nathanbirrell.me/img/logo.png" alt="Damgar Group Logo"></a>
+              <img id="sticky-logo-swap" class="hide" src="http://damgar.nathanbirrell.me/img/logo_d.png" alt="Damgar Group Symbol">
+              <img id="expanded-logo-swap" class="hide" src="http://damgar.nathanbirrell.me/img/logo.png" alt="Damgar Group Symbol">
+              <a class="logo" href="http://damgar.nathanbirrell.me"><img class="mobile-logo mobile-logo-expanded" src="http://damgar.nathanbirrell.me/img/logo.png" alt="Damgar Group Logo"></a>
               <button class="menu-icon float-right" type="button" data-open="offCanvasRight"><i class="fa fa-bars"></i></button>
             </div>
           </div>
@@ -115,12 +115,12 @@
         <!-- off-canvas right menu -->
         <nav class="off-canvas position-right" id="offCanvasRight" data-off-canvas data-position="right" role="navigation">
           <ul class="vertical dropdown menu" data-dropdown-menu>
-            <img class="menu-logo" src="https://damgar.nathanbirrell.me/img/logo_d_white.png" alt="Damgar Group Symbol">
+            <img class="menu-logo" src="http://damgar.nathanbirrell.me/img/logo_d_white.png" alt="Damgar Group Symbol">
             <button class="close-icon float-right" type="button" data-close="offCanvasRight"><i class="fa fa-times"></i></button>
-            <li><a href="https://damgar.nathanbirrell.me/portfolio">Portfolio</a></li>
-<li><a href="https://damgar.nathanbirrell.me/testimonials">Testimonials</a></li>
-<li><a href="https://damgar.nathanbirrell.me/#about">About</a></li>
-<li><a href="https://damgar.nathanbirrell.me/contact">Contact</a></li>
+            <li><a href="http://damgar.nathanbirrell.me/portfolio">Portfolio</a></li>
+<li><a href="http://damgar.nathanbirrell.me/testimonials">Testimonials</a></li>
+<li><a href="http://damgar.nathanbirrell.me/#about">About</a></li>
+<li><a href="http://damgar.nathanbirrell.me/contact">Contact</a></li>
 
           </ul>
         </nav>
@@ -273,9 +273,9 @@
     ================================================== -->
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="https://damgar.nathanbirrell.me/bower_components/jquery/dist/jquery.js"><\/script>')</script>
+    <script>window.jQuery || document.write('<script src="http://damgar.nathanbirrell.me/bower_components/jquery/dist/jquery.js"><\/script>')</script>
 
-    <script src="https://damgar.nathanbirrell.me/js/dist/scripts.min.js"></script>
+    <script src="http://damgar.nathanbirrell.me/js/dist/scripts.min.js"></script>
 
     <!-- Google Analytics CHANGE THIS TO YOUR UA CODE-->
     <script>
