Improve URL handling

--- a/testimonials.html
+++ b/testimonials.html
@@ -21,7 +21,7 @@ description: Testimonials from our clients.
       <div class="testimonial-wrap">
         <div class="row">
           <div class="large-6 columns testimonial hide-for-small-only hide-for-medium-only">
-            <img class="thumbnail" src="{{site.url}}/img/demo_project_thumb.jpg" alt="Redering of Verdis Apartments, Brighton">
+            <img class="thumbnail" src="{{site.baseurl}}/img/demo_project_thumb.jpg" alt="Redering of Verdis Apartments, Brighton">
           </div>
           <div class="large-6 columns testimonial">
             <div class="quote">
@@ -52,7 +52,7 @@ description: Testimonials from our clients.
             </div>
           </div>
           <div class="large-6 columns testimonial hide-for-small-only hide-for-medium-only">
-            <img class="thumbnail" src="{{site.url}}/project-photos/otto/damgar-otto-apartments-brunswick-00.jpg" alt="Internal Redering of Verdis Apartments, Brighton">
+            <img class="thumbnail" src="{{site.baseurl}}/project-photos/otto/damgar-otto-apartments-brunswick-00.jpg" alt="Internal Redering of Verdis Apartments, Brighton">
           </div>
         </div>
       </div>
