--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ keywords: property, developer, melbourne, apartments
 
 <div class="row column">
   <div class="cta-wrap">
-    <a class="large button cta main-cta" href="{{site.url}}/portfolio">SEE OUR <br> DEVELOPMENTS</a>
+    <a class="large button cta main-cta" href="{{site.baseurl}}/portfolio">SEE OUR <br> DEVELOPMENTS</a>
   </div>
 </div>
 
