--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ keywords: property, developer, melbourne, apartments
         <p>During our 30 years in the Property Development business we have carefully fostered strong relationships with key industry partners including Architects, Engineers and Planning Consultants.</p>
       </div>
       <div class="medium-4 columns">
-        <p>All our projects funded in conjunction with Australian Banks, of which we have long standing relationships.</p>
+        <p>All our projects are funded in conjunction with Australian Banks, of which we have long standing relationships.</p>
         <p>As builders in our own right, with a keen eye to quality and liveability, we know what it takes to get the job done and done properly.</p>
       </div>
     </div>
