Add redirects for Google sitelinks that are cached

--- a/portfolio.html
+++ b/portfolio.html
@@ -2,6 +2,8 @@
 layout: default
 title: Portfolio
 description: Damgar Property Group leads the market for small to medium residential and commercial property development.
+
+redirect_from: "/our-developments"
 ---
 
 <div class="row">
