--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@ layout: default
 title: Damgar Property Group - Boutique Residential and Commerical Property Development Melbourne
 description: Damgar Property Group stands alone with a 100% completion rate since 1988.
 keywords: property, developer, melbourne, apartments
+
+redirect_from: "/directors"
+redirect_from: "/about"
+redirect_from: "/development-management"
 ---
 
 <div class="project-latest">
