--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@ title: Damgar Property Group - Boutique Residential and Commerical Property Deve
 description: Damgar Property Group stands alone with a 100% completion rate since 1988.
 keywords: property, developer, melbourne, apartments
 
-redirect_from: "/directors"
-redirect_from: "/about"
-redirect_from: "/development-management"
+redirect_from:
+  - "/directors"
+  - "/about"
+  - "/development-management"
 ---
 
 <div class="project-latest">
