Add CTA back into the mix:

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ redirect_from:
 
 <div class="row column">
   <div class="cta-wrap">
-    <a class="large button cta main-cta" href="{{site.baseurl}}/portfolio">SEE OUR <br> DEVELOPMENTS</a>
+    <a class="large button cta main-cta" href="{{site.latest_project_url}}" target="_blank">LATEST PROJECT <br>SELLING NOW</a>
   </div>
 </div>
 
