fix broken linkedin images

--- a/testimonials.html
+++ b/testimonials.html
@@ -40,7 +40,7 @@ description: Testimonials from our clients.
               <p>I was kept up to date right through the construction process and inspected the property prior to settlement. The apartment was in great condition and I have had tenants from day 1 who have been very happy with the property.</p>
             </div>
             <div class="testimonial-person">
-              <img class="photo" src="https://media.licdn.com/mpr/mpr/shrinknp_200_200/AAEAAQAAAAAAAAh0AAAAJDY5NTJkOWRiLTU5NGItNGE0OS1hMWFmLWQxZTk3NTg5YjJkMg.jpg" alt="Brad Ellis' LinkedIn image"> </img>
+              <span class="photo"> </span>
               <p>Brad Ellis</p>
               <p>General Manager Human Resources, Coles Supermarkets</p>
             </div>
@@ -57,7 +57,7 @@ description: Testimonials from our clients.
               <p>It’s the best run apartment development I’ve been involved with.</p>
             </div>
             <div class="testimonial-person">
-              <img class="photo" src="http://m.c.lnkd.licdn.com/mpr/mpr/shrink_100_100/p/8/005/059/05c/356707f.jpg" alt="Steve Abbot's LinkedIn image"></img>
+              <span class="photo"> </span>
               <p>Steve Abbott</p>
               <p>Chief Operating Officer, Fenner Dunlop Australia</p>
             </div>
